--- a/AndroidStudioHarness/build.gradle
+++ b/AndroidStudioHarness/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.8.20'
 
     repositories {
         mavenCentral()
@@ -12,7 +12,7 @@ buildscript {
 }
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.16'
+    id 'org.jetbrains.intellij' version '1.16.1'
 }
 
 apply plugin: 'java'
@@ -32,17 +32,17 @@ dependencies {
     compileOnly fileTree(dir: "$StudioCompilePath/plugins/android/lib", include: ['*.jar'])
     compileOnly fileTree(dir: "$StudioCompilePath/lib", include: ['*.jar'])
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile fileTree(dir: "$StudioCompilePath/plugins/android/lib", include: ['*.jar'])
-    testCompile fileTree(dir: "$StudioCompilePath/lib", include: ['*.jar'])
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation fileTree(dir: "$StudioCompilePath/plugins/android/lib", include: ['*.jar'])
+    testImplementation fileTree(dir: "$StudioCompilePath/lib", include: ['*.jar'])
 }
 if (!hasProperty('StudioCompilePath')) {
     throw new GradleException("No StudioCompilePath value was set, please create gradle.properties file")
 }
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '2019.3.3'
-    plugins 'android'
+    version = '2023.2.1'
+    plugins = ['android']
     //intellij.localPath = project.hasProperty("StudioRunPath") ? StudioRunPath : StudioCompilePath
 }
 
@@ -51,8 +51,8 @@ version "$project_version"
 
 sourceCompatibility = "$javaVersion"
 
-patchPluginXml {
+/*patchPluginXml {
     changeNotes """
       Add change notes here.<br>
       <em>most HTML tags may be used</em>"""
-}
+}*/
