--- a/FlowDroidCFG/build.gradle
+++ b/FlowDroidCFG/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'java-library'
-    id 'maven'
     id 'maven-publish'
     id 'signing'
 }
@@ -47,14 +46,14 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: commons_lang3_version
-    compile group: 'commons-cli', name: 'commons-cli', version: commons_cli_version
+    compileOnly group: 'org.apache.commons', name: 'commons-lang3', version: commons_lang3_version
+    compileOnly group: 'commons-cli', name: 'commons-cli', version: commons_cli_version
     implementation 'ca.mcgill.sable:soot:$soot_version:jar-with-dependencies@jar'
     implementation 'pxb.android:axml:$axml_version'
     implementation 'heros:heros:$heros_version'
     implementation group: 'de.tud.sse', name: 'soot-infoflow', version: infoflow_version
     implementation group: 'de.tud.sse', name: 'soot-infoflow-android', version: infoflow_version
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 /*
 java {
