--- a/FlowDroidCFG/build.gradle
+++ b/FlowDroidCFG/build.gradle
@@ -43,16 +43,20 @@ repositories {
     maven {
         url "https://soot-build.cs.uni-paderborn.de/nexus/repository/soot-release/"
     }
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots/"
+    }
 }
 
 dependencies {
     compileOnly group: 'org.apache.commons', name: 'commons-lang3', version: commons_lang3_version
     compileOnly group: 'commons-cli', name: 'commons-cli', version: commons_cli_version
-    implementation 'ca.mcgill.sable:soot:$soot_version:jar-with-dependencies@jar'
-    implementation 'pxb.android:axml:$axml_version'
-    implementation 'heros:heros:$heros_version'
-    implementation group: 'de.tud.sse', name: 'soot-infoflow', version: infoflow_version
-    implementation group: 'de.tud.sse', name: 'soot-infoflow-android', version: infoflow_version
+    implementation 'ca.mcgill.sable:soot:'+soot_version+':jar-with-dependencies@jar'
+    implementation 'pxb.android:axml:'+axml_version
+    implementation 'heros:heros:'+heros_version
+    implementation group: 'de.fraunhofer.sit.sse.flowdroid', name: 'soot-infoflow', version: infoflow_version
+    implementation group: 'de.fraunhofer.sit.sse.flowdroid', name: 'soot-infoflow-summaries', version: infoflow_version
+    implementation group: 'de.fraunhofer.sit.sse.flowdroid', name: 'soot-infoflow-android', version: infoflow_version
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 /*
