--- a/FlowDroidCFG/build.gradle
+++ b/FlowDroidCFG/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     compileOnly group: 'org.apache.commons', name: 'commons-lang3', version: commons_lang3_version
     compileOnly group: 'commons-cli', name: 'commons-cli', version: commons_cli_version
     implementation 'ca.mcgill.sable:soot:'+soot_version+':jar-with-dependencies@jar'
-    implementation 'pxb.android:axml:'+axml_version
-    implementation 'heros:heros:'+heros_version
+    implementation 'de.upb.cs.swt:heros:'+heros_version
+    implementation group: 'de.upb.cs.swt', name: 'axml', version: '2.0.0'
     implementation group: 'de.fraunhofer.sit.sse.flowdroid', name: 'soot-infoflow', version: infoflow_version
     implementation group: 'de.fraunhofer.sit.sse.flowdroid', name: 'soot-infoflow-summaries', version: infoflow_version
     implementation group: 'de.fraunhofer.sit.sse.flowdroid', name: 'soot-infoflow-android', version: infoflow_version
